--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h2 {
     cursor: pointer;
 }
 
+
 @media (max-width: 768px) {
     body {
         display:flex;
@@ -47,42 +48,25 @@ h2 {
 
     .button {
         height: 50px; /* Diminuir a altura do botão */
-        width: 80%; /* Aumentar a largura do botão para ocupar 80% da tela */
+        width: 90px; /* Aumentar a largura do botão para ocupar 80% da tela */
         font-size: 14px; /* Aumentar o tamanho da fonte do botão */
         margin: 0 auto; /* Centralizar o botão horizontalmente */
+        width: 100px;
+        width: 50%; /* Botão ocupa 100% da largura em telas pequenas */
+        font-size: 18px; 
     }
-}
-@media (max-width: 768px) {
     .top {
         flex-direction: column; /* Muda a direção para coluna em telas pequenas */
     }
     h2 {
-        font-size: 24px;
+        font-size: 60px;
         padding: top; /* Ajusta o tamanho da fonte do título */
     }
 
     .results {
         padding: 1px;
         height: 100%; 
+        font-size: 20px;
         
-    }
-}
-@media (max-width: 768px) {
-    body {
-        font-size: 14px; /* Tamanho reduzido para mobile */
-    }
-
-    .results {
-        font-size: 14px; /* Ajusta o tamanho da fonte dos resultados */
-    }
-
-    .button {
-        width: 100px;
-        width: 50%; /* Botão ocupa 100% da largura em telas pequenas */
-        font-size: 18px; /* Aumenta o tamanho da fonte do botão */
-    }
-
-    h2 {
-        font-size: 24px; /* Ajusta o tamanho da fonte do título */
     }
 }
